// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transpiler integration test FullComponent.tsx match expectation 1`] = `
Object {
  "file": "FullComponent.tsx",
  "postContent": "import { BearerFetch, BearerRef, BearerState, Component, Intent, IntentType, Listen, State, Watch, Prop, EventEmitter, Event, Element } from '@bearer/core';
@Component({
    tag: 'full-component'
})
export class FullComponent {
    private fetcher: BearerFetch;
    @RetrieveStateIntent()
    retrieve: BearerFetch;
    @BearerState()
    @State()
    attachedPullRequests: Array<any>;
    @BearerState({ statePropName: 'goats' })
    @State()
    ducks: Array<any>;
    private fetchResource: BearerFetch;
    screenRenderer = () => {
        return (<bearer-navigator-screen navigationTitle=\\"Last Screen\\" renderFunc={() => [<h1>Hello Partick</h1>]}/>);
    };
    render() {
        return (<bearer-navigator>
        <bearer-navigator-auth-screen scenarioId=\\"SPONGE_BOB\\"/>
        <bearer-navigator-screen navigationTitle=\\"First Screen\\" renderFunc={() => [<bearer-scrollable fetcher={this.fetcher}/>]}/>
        <bearer-navigator-screen navigationTitle=\\"First Screen\\" renderFunc={() => [<h1>Complex one</h1>,
            <bearer-scrollable fetcher={this.fetcher}/>,
            <span>this text is fine</span>]}/>
        <bearer-navigator-screen navigationTitle={({ data }) => data.name} renderFunc={() => [<bearer-scrollable fetcher={this.fetcher}/>]}/>

        <bearer-navigator-screen renderFunc={({ data, next, prev }) => (<last-screen next={next} complete={({ complete }) => {
            console.log('complete');
            complete();
        }}/>)}/>
        {this.screenRenderer()}
      </bearer-navigator>);
    }
    @State()
    farmer: BearerRef<any>;
    @Prop({ \\"mutable\\": true })
    farmerRefId: string;
    @Listen(\\"body:bearer|SPONGE_BOB|undefined|farmerSaved\\")
    farmerRefIdChanged(event) {
        if (this.farmerRefId !== event.detail.referenceId)
            this.farmerRefId = event.detail.referenceId;
        else {
            this._loadFarmer();
        }
    }
    _loadFarmer = () => {
        this.fetcherRetrieveFarmer({ referenceId: this.farmerRefId }).then(({ data }: {
            data: BearerRef<any>;
        }) => {
            this.farmer = data;
        });
    };
    private fetcherRetrieveFarmer;
    @Watch(\\"farmerRefId\\")
    _watchFarmer(newValueName: string) {
        if (newValueName) {
            this._loadFarmer();
        }
    }
    @State()
    goat: BearerRef<any>;
    @Prop({ \\"mutable\\": true })
    goatId: string;
    @Listen(\\"body:bearer|SPONGE_BOB|SCOPE|goatMilked\\")
    goatIdChanged(event) {
        if (this.goatId !== event.detail.referenceId)
            this.goatId = event.detail.referenceId;
        else {
            this._loadGoat();
        }
    }
    _loadGoat = () => {
        this.fetcherRetrieveGoat({ referenceId: this.goatId }).then(({ data }: {
            data: BearerRef<any>;
        }) => {
            this.goat = data;
        });
    };
    private fetcherRetrieveGoat;
    @Watch(\\"goatId\\")
    _watchGoat(newValueName: string) {
        if (newValueName) {
            this._loadGoat();
        }
    }
    private saveFeedPanda: BearerFetch<BearerRef<any>>;
    @Event({ eventName: \\"bearer|SPONGE_BOB|global|feedPandaSaved\\" })
    feedPandaSaved: EventEmitter<any>;
    @State()
    feedPanda: BearerRef<any>;
    @State()
    feedPandaRefId: string;
    @Watch(\\"feedPanda\\")
    feedPandaSavedWatcher(newValue) {
        if (newValue) {
            this.saveFeedPanda({ body: { feedPanda: newValue }, referenceId: this.feedPandaRefId }).then(({ referenceId, data }) => {
                this.feedPandaSaved.emit({ referenceId, feedPanda: data || this.feedPanda });
                this.feedPandaRefId = referenceId;
            });
        }
        else {
            this.feedPandaSaved.emit({ feedPanda: newValue });
        }
    }
    private saveFeedPanda: BearerFetch<BearerRef<any>>;
    @Event({ eventName: \\"bearer|SPONGE_BOB|global|milked\\" })
    milked: EventEmitter<any>;
    @State()
    feedPanda: BearerRef<any>;
    @State()
    feedPandaRefId: string;
    @Watch(\\"aPanda\\")
    milkedWatcher(newValue) {
        if (newValue) {
            this.saveFeedPanda({ body: { feedPanda: newValue }, referenceId: this.feedPandaRefId }).then(({ referenceId, data }) => {
                this.milked.emit({ referenceId, feedPanda: data || this.feedPanda });
                this.feedPandaRefId = referenceId;
            });
        }
        else {
            this.milked.emit({ feedPanda: newValue });
        }
    }
    @Prop()
    referenceId: string;
    @Element()
    el: HTMLElement;
    constructor() {
        Intent('ListRepositories')(this, \\"fetcher\\");
        Intent('getPullRequest', IntentType.FetchData)(this, \\"fetchResource\\");
        Intent(\\"retrieveFarmer\\")(this, \\"fetcherRetrieveFarmer\\");
        Intent(\\"retrieveGoat\\")(this, \\"fetcherRetrieveGoat\\");
        Intent(\\"saveFeedPanda\\")(this, \\"saveFeedPanda\\");
        Intent(\\"saveFeedPanda\\")(this, \\"saveFeedPanda\\");
    }
    get SCENARIO_ID() { return \\"SPONGE_BOB\\"; }
    @Prop({ \\"context\\": \\"bearer\\" })
    bearerContext: any;
    @Prop()
    setupId: string;
    componentDidLoad() {
        if (this.setupId) {
            this.bearerContext.setupId = this.setupId;
        }
        if (this.farmerRefId) {
            this._loadFarmer();
        }
        if (this.goatId) {
            this._loadGoat();
        }
    }
    @Watch(\\"attachedPullRequests\\")
    _notifyBearerStateHandler_attachedPullRequests(newValue: any) {
        this.bearerContext.update(\\"attachedPullRequests\\", newValue);
    }
    @Watch(\\"ducks\\")
    _notifyBearerStateHandler_ducks(newValue: any) {
        this.bearerContext.update(\\"goats\\", newValue);
    }
    componentWillLoad() {
        this.bearerContext.subscribe(this);
    }
    componentDidUnload() {
        this.bearerContext.unsubscribe(this);
    }
    bearerUpdateFromState = state => {
        this.attachedPullRequests = state[\\"attachedPullRequests\\"];
        this.ducks = state[\\"goats\\"];
    };
}
",
}
`;

exports[`Transpiler integration test RootComponent.tsx match expectation 1`] = `
Object {
  "file": "RootComponent.tsx",
  "postContent": "import { BearerFetch, BearerState, Intent, IntentType, Component, Prop, Element, Watch, State } from '@bearer/core';
@Component({
    tag: \\"attach-pull-request-action\\",
    styleUrl: \\"AttachPullRequest.css\\",
    shadow: true
})
export class AttachPullRequestAction {
    private fetcher: BearerFetch;
    @RetrieveStateIntent()
    retrieve: BearerFetch;
    @BearerState()
    @State()
    attachedPullRequests: Array<any>;
    @BearerState({ statePropName: 'goats' })
    @State()
    ducks: Array<any>;
    private fetchResource: BearerFetch;
    render() {
        return (<bearer-authorized scenarioId=\\"SPONGE_BOB\\">
        <bearer-scrollable fetcher={this.fetcher}/>
      </bearer-authorized>);
    }
    @Prop()
    referenceId: string;
    @Element()
    el: HTMLElement;
    constructor() {
        Intent('ListRepositories')(this, \\"fetcher\\");
        Intent('getPullRequest', IntentType.FetchData)(this, \\"fetchResource\\");
    }
    get SCENARIO_ID() { return \\"SPONGE_BOB\\"; }
    @Prop({ \\"context\\": \\"bearer\\" })
    bearerContext: any;
    @Prop()
    setupId: string;
    componentDidLoad() {
        if (this.setupId) {
            this.bearerContext.setupId = this.setupId;
        }
    }
    @Watch(\\"attachedPullRequests\\")
    _notifyBearerStateHandler_attachedPullRequests(newValue: any) {
        this.bearerContext.update(\\"attachedPullRequests\\", newValue);
    }
    @Watch(\\"ducks\\")
    _notifyBearerStateHandler_ducks(newValue: any) {
        this.bearerContext.update(\\"goats\\", newValue);
    }
    componentWillLoad() {
        this.bearerContext.subscribe(this);
    }
    componentDidUnload() {
        this.bearerContext.unsubscribe(this);
    }
    bearerUpdateFromState = state => {
        this.attachedPullRequests = state[\\"attachedPullRequests\\"];
        this.ducks = state[\\"goats\\"];
    };
}
",
}
`;

exports[`Transpiler integration test exportObject.ts match expectation 1`] = `
Object {
  "file": "exportObject.ts",
  "postContent": "class SpongeBobHelper {
    private name: string;
    constructor(name: string) {
        this.name = name;
    }
}
export class PatrickHelper {
    constructor() {
    }
}
export default {
    spongeHelper: SpongeBobHelper,
    patrickHelper: PatrickHelper
};
",
}
`;

exports[`Transpiler integration test invalidRootComponent.tsx match expectation 1`] = `
Object {
  "file": "invalidRootComponent.tsx",
  "postContent": "import { BearerFetch, BearerState, Intent, IntentType, Component, Prop, Element, Watch, State } from '@bearer/core';
@Component({
    tag: \\"attach-pull-request-display\\",
    styleUrl: \\"attachPullRequest.css\\",
    shadow: false
})
export class AttachPullRequestDisplay {
    private fetcher: BearerFetch;
    @RetrieveStateIntent()
    retrieve: BearerFetch;
    @BearerState()
    @State()
    attachedPullRequests: Array<any>;
    @BearerState({ statePropName: 'goats' })
    @State()
    ducks: Array<any>;
    private fetchResource: BearerFetch;
    render() {
        return <bearer-scrollable fetcher={this.fetcher}/>;
    }
    @Prop()
    referenceId: string;
    @Element()
    el: HTMLElement;
    constructor() {
        Intent('ListRepositories')(this, \\"fetcher\\");
        Intent('getPullRequest', IntentType.FetchData)(this, \\"fetchResource\\");
    }
    get SCENARIO_ID() { return \\"SPONGE_BOB\\"; }
    @Prop({ \\"context\\": \\"bearer\\" })
    bearerContext: any;
    @Prop()
    setupId: string;
    componentDidLoad() {
        if (this.setupId) {
            this.bearerContext.setupId = this.setupId;
        }
    }
    @Watch(\\"attachedPullRequests\\")
    _notifyBearerStateHandler_attachedPullRequests(newValue: any) {
        this.bearerContext.update(\\"attachedPullRequests\\", newValue);
    }
    @Watch(\\"ducks\\")
    _notifyBearerStateHandler_ducks(newValue: any) {
        this.bearerContext.update(\\"goats\\", newValue);
    }
    componentWillLoad() {
        this.bearerContext.subscribe(this);
    }
    componentDidUnload() {
        this.bearerContext.unsubscribe(this);
    }
    bearerUpdateFromState = state => {
        this.attachedPullRequests = state[\\"attachedPullRequests\\"];
        this.ducks = state[\\"goats\\"];
    };
}
",
}
`;

exports[`Transpiler integration test overrides-decorator.tsx match expectation 1`] = `
Object {
  "file": "overrides-decorator.tsx",
  "postContent": "import { Component, Intent, BearerFetch, IntentType, Prop } from '@bearer/core';
@Component({
    tag: 'overrides-decorator-full'
})
class OverridesDecorarotFull {
    private fetcher: BearerFetch;
    private memberFetcher: BearerFetch;
    constructor() {
        Intent('collectionIntent')(this, \\"fetcher\\");
        Intent('collectionIntent', IntentType.FetchData)(this, \\"memberFetcher\\");
    }
    componentWillLoad() {
        console.log('componentWillLoad');
    }
    componentDidUnload() {
        console.log('componentDidUnload');
    }
    get SCENARIO_ID() { return \\"SPONGE_BOB\\"; }
    @Prop({ \\"context\\": \\"bearer\\" })
    bearerContext: any;
    @Prop()
    setupId: string;
    componentDidLoad() {
        if (this.setupId) {
            this.bearerContext.setupId = this.setupId;
        }
        console.log('componentDidLoad');
    }
}
",
}
`;

exports[`Transpiler integration test overrides-decorator-less.1.tsx match expectation 1`] = `
Object {
  "file": "overrides-decorator-less.1.tsx",
  "postContent": "import { Component, Prop } from '@bearer/core';
@Component({
    tag: 'overrides-decorator-less'
})
class OverridesDecorarotLess {
    constructor() {
    }
    componentWillLoad() {
        console.log('componentWillLoad');
    }
    componentDidUnload() {
        console.log('componentDidUnload');
    }
    get SCENARIO_ID() { return \\"SPONGE_BOB\\"; }
    @Prop({ \\"context\\": \\"bearer\\" })
    bearerContext: any;
    @Prop()
    setupId: string;
    componentDidLoad() {
        if (this.setupId) {
            this.bearerContext.setupId = this.setupId;
        }
        console.log('componentDidLoad');
    }
}
",
}
`;
